:sparkles: add id and equal operator to lexer

--- a/calculator.ipynb
+++ b/calculator.ipynb
@@ -15,8 +15,12 @@
     "\n",
     "| Sintactic rules | Semantics rules |\n",
     "| :-: | :-: |\n",
-    "| input -> input expr ; | Escribe(expr.s) |\n",
-    "| input -> $\\epsilon$ | |\n",
+    "| sentence -> sentence exprID ; | Escribe(sentence.s exprID.s;) |\n",
+    "| sentence -> sentence ID;| $table[ID.lexval] = 0$ |\n",
+    "| sentence -> expr;| $Escribe(expr.s)$ |\n",
+    "| sentence -> $\\epsilon$ | |\n",
+    "| exprID -> $exprID_1$ `ID` `=` $expr$ | $exprID.s = table[ID.lexval] = expr.s |\n",
+    "| exprID ->$\\epsilon$ | |\n",
     "| expr -> $expr_1$ `+` sum | $expr.s = expr_1.s + sum.s$ |\n",
     "| expr -> $expr_1$ `-` sum | $expr.s = expr_1.s - sum.s$ |\n",
     "| expr -> sum |  expr.s = sum.s|\n",
@@ -24,13 +28,14 @@
     "| sum -> $sum_1 `/` fact$ | $sum.s = sum_1.s / fact.s$ |\n",
     "| sum -> fact | sum.s = fact.s|\n",
     "| fact -> $- fact_1$ | fact.s = $- fact_1.s $|\n",
+    "| fact -> ID| fact.s = $table[ID.lexval]$\n",
     "| fact -> NUM | fact.s = NUM.lexval |\n",
     "| fact -> `(` expr `)` | fact.s = expr.s |"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,21 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CalcLexer(Lexer):\n",
     "    # set of tokens\n",
     "    tokens = {\n",
-    "        'CNUM'\n",
+    "        'ID', 'CNUM'\n",
     "    }\n",
     "    # set of literals\n",
     "    literals = {\n",
     "        '+', '-', '*', '/', '(', ')', ';'\n",
     "    }\n",
     "\n",
+    "    # ignore\n",
     "    ignore = ' \\t'\n",
+    "\n",
+    "    # tokens\n",
+    "    ID = r'[a-zA-Z_][a-zA-Z-0-9_]*'\n",
+    "    \n",
     "\n",
     "    \n",
     "    # special case \n",
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,28 +114,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4 + 4</td>\n",
+       "      <td>4 + 4;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5 - 5</td>\n",
+       "      <td>5 - 5;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2</td>\n",
+       "      <td>(5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             operators\n",
-       "0                                4 + 4\n",
-       "1                                5 - 5\n",
-       "2  (5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2"
+       "                              operators\n",
+       "0                                4 + 4;\n",
+       "1                                5 - 5;\n",
+       "2  (5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2;"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,19 +155,21 @@
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------\n",
-      "0 Lexically Testing sentence: '4 + 4'\n",
+      "0 Lexically Testing sentence: '4 + 4;'\n",
       "--------------------------------------------------------------------------------\n",
       " type = 'CNUM', value = '4'\n",
       " type = '+', value = '+'\n",
       " type = 'CNUM', value = '4'\n",
+      " type = ';', value = ';'\n",
       "--------------------------------------------------------------------------------\n",
-      "1 Lexically Testing sentence: '5 - 5'\n",
+      "1 Lexically Testing sentence: '5 - 5;'\n",
       "--------------------------------------------------------------------------------\n",
       " type = 'CNUM', value = '5'\n",
       " type = '-', value = '-'\n",
       " type = 'CNUM', value = '5'\n",
+      " type = ';', value = ';'\n",
       "--------------------------------------------------------------------------------\n",
-      "2 Lexically Testing sentence: '(5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2'\n",
+      "2 Lexically Testing sentence: '(5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2;'\n",
       "--------------------------------------------------------------------------------\n",
       " type = '(', value = '('\n",
       " type = 'CNUM', value = '5'\n",
@@ -177,7 +189,8 @@
       " type = 'CNUM', value = '7'\n",
       " type = ')', value = ')'\n",
       " type = '*', value = '*'\n",
-      " type = 'CNUM', value = '2'\n"
+      " type = 'CNUM', value = '2'\n",
+      " type = ';', value = ';'\n"
      ]
     }
    ],
@@ -209,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
