:sparkles: add binary lexer

--- a/binaryNumbers.ipynb
+++ b/binaryNumbers.ipynb
@@ -27,7 +27,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = 3"
+    "from sly import Lexer, Parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BinaryLexer(Lexer):\n",
+    "    literals = {'.'}\n",
+    "    tokens = {'DIGIT'}\n",
+    "\n",
+    "    ignore = '\\t'\n",
+    "\n",
+    "    @_(r'[01]')\n",
+    "    def DIGIT(self, t):\n",
+    "        t.value = int(t.value)\n",
+    "        return t\n",
+    "    \n",
+    "    def error(self, t):\n",
+    "        print('<-'*10, \"Illegal character ' {} ' \".format(t.value[0], '->' * 10))\n",
+    "        t.type = \"Illegal\"\n",
+    "        t.value = t.value[0]\n",
+    "        self.index +=1\n",
+    "        return t"
    ]
   }
  ],
