:sparkles: add testing lexer

--- a/binaryNumbers.ipynb
+++ b/binaryNumbers.ipynb
@@ -23,11 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sly import Lexer, Parser"
+    "from sly import Lexer, Parser\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -54,6 +55,111 @@
     "        self.index +=1\n",
     "        return t"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>binary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1010101.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1010.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1010101.11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       binary\n",
+       "0  1010101.00\n",
+       "1     1010.00\n",
+       "2        1.00\n",
+       "3        0.00\n",
+       "4  1010101.11"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('assets\\/binary.csv')\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lexer = BinaryLexer()\n",
+    "sentences = pd.read_csv('assets\\/binary.csv').binary\n",
+    "pass_or_not = []\n",
+    "all_token_pass = True \n",
+    "\n",
+    "for index, sentence in enumerate(sentences):\n",
+    "    print('-' * 80, \"{} Lexically Testing sentence: '{}'\".format(index,\n",
+    "          sentence), '-' * 80, sep='\\n')\n",
+    "    for token in lexer.tokenize(sentence):\n",
+    "        print(\" type = '{}', value = '{}'\".format(token.type, token.value))\n",
+    "        if all_token_pass and 'Illegal' in token.type:\n",
+    "            all_token_pass = False\n",
+    "    \n",
+    "    pass_or_not.append('Pass') if all_token_pass else pass_or_not.append('FAIL')\n",
+    "    all_token_pass = True\n",
+    "\n",
+    "data['Test'] = pass_or_not\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
