:sparkles: add grammar

--- a/calculator.ipynb
+++ b/calculator.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "    }\n",
     "    # set of literals\n",
     "    literals = {\n",
-    "        '+', '-', '*', '/', '(', ')', ';'\n",
+    "        '=', '+', '-', '*', '/', '(', ')', ';'\n",
     "    }\n",
     "\n",
     "    # ignore\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +124,22 @@
        "      <th>2</th>\n",
        "      <td>(5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2;</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(5 * b) + 5 - d / pd + (6 - 7 ) * 2;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>a = b = c ;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>tr = bl = r = (6 - 7 ) * 2;</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -132,10 +148,14 @@
        "                              operators\n",
        "0                                4 + 4;\n",
        "1                                5 - 5;\n",
-       "2  (5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2;"
+       "2  (5 * 7) + 5 - 78 / 4 + (6 - 7 ) * 2;\n",
+       "3                                    a;\n",
+       "4  (5 * b) + 5 - d / pd + (6 - 7 ) * 2;\n",
+       "5                           a = b = c ;\n",
+       "6           tr = bl = r = (6 - 7 ) * 2;"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -190,6 +210,60 @@
       " type = ')', value = ')'\n",
       " type = '*', value = '*'\n",
       " type = 'CNUM', value = '2'\n",
+      " type = ';', value = ';'\n",
+      "--------------------------------------------------------------------------------\n",
+      "3 Lexically Testing sentence: 'a;'\n",
+      "--------------------------------------------------------------------------------\n",
+      " type = 'ID', value = 'a'\n",
+      " type = ';', value = ';'\n",
+      "--------------------------------------------------------------------------------\n",
+      "4 Lexically Testing sentence: '(5 * b) + 5 - d / pd + (6 - 7 ) * 2;'\n",
+      "--------------------------------------------------------------------------------\n",
+      " type = '(', value = '('\n",
+      " type = 'CNUM', value = '5'\n",
+      " type = '*', value = '*'\n",
+      " type = 'ID', value = 'b'\n",
+      " type = ')', value = ')'\n",
+      " type = '+', value = '+'\n",
+      " type = 'CNUM', value = '5'\n",
+      " type = '-', value = '-'\n",
+      " type = 'ID', value = 'd'\n",
+      " type = '/', value = '/'\n",
+      " type = 'ID', value = 'pd'\n",
+      " type = '+', value = '+'\n",
+      " type = '(', value = '('\n",
+      " type = 'CNUM', value = '6'\n",
+      " type = '-', value = '-'\n",
+      " type = 'CNUM', value = '7'\n",
+      " type = ')', value = ')'\n",
+      " type = '*', value = '*'\n",
+      " type = 'CNUM', value = '2'\n",
+      " type = ';', value = ';'\n",
+      "--------------------------------------------------------------------------------\n",
+      "5 Lexically Testing sentence: 'a = b = c ;'\n",
+      "--------------------------------------------------------------------------------\n",
+      " type = 'ID', value = 'a'\n",
+      " type = '=', value = '='\n",
+      " type = 'ID', value = 'b'\n",
+      " type = '=', value = '='\n",
+      " type = 'ID', value = 'c'\n",
+      " type = ';', value = ';'\n",
+      "--------------------------------------------------------------------------------\n",
+      "6 Lexically Testing sentence: 'tr = bl = r = (6 - 7 ) * 2;'\n",
+      "--------------------------------------------------------------------------------\n",
+      " type = 'ID', value = 'tr'\n",
+      " type = '=', value = '='\n",
+      " type = 'ID', value = 'bl'\n",
+      " type = '=', value = '='\n",
+      " type = 'ID', value = 'r'\n",
+      " type = '=', value = '='\n",
+      " type = '(', value = '('\n",
+      " type = 'CNUM', value = '6'\n",
+      " type = '-', value = '-'\n",
+      " type = 'CNUM', value = '7'\n",
+      " type = ')', value = ')'\n",
+      " type = '*', value = '*'\n",
+      " type = 'CNUM', value = '2'\n",
       " type = ';', value = ';'\n"
      ]
     }
@@ -222,20 +296,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: 1 shift/reduce conflict\n"
+     ]
+    }
+   ],
    "source": [
+    "table = {}\n",
+    "\n",
     "class CalcParser(Parser):\n",
     "    tokens = CalcLexer.tokens\n",
-    "    lexval = {}\n",
     "\n",
-    "    @_('input expr \";\"')\n",
-    "    def input(self, p):\n",
+    "\n",
+    "    @_('sentence exprID \";\"')\n",
+    "    def sentence(self, p):\n",
     "        print(\"{} {} ;\".format(p.input, p.expr))\n",
+    "\n",
     "    \n",
+    "    @_('sentence \";\"')\n",
+    "    def sentence(self, p ):\n",
+    "        global table \n",
+    "        table[p.ID] = 0\n",
+    "        return p.sentence\n",
+    "\n",
     "    @_('empty')\n",
-    "    def input(self, p):\n",
+    "    def sentence(self, p):\n",
+    "        return ''\n",
+    "     \n",
+    "    @_('exprID ID \"=\" expr')\n",
+    "    def exprID(self, p):\n",
+    "        global table\n",
+    "        table[p.ID] = p.expr.s\n",
+    "        return p.exprID\n",
+    "\n",
+    "    @_('empty')\n",
+    "    def exprID(self, p):\n",
     "        return ''\n",
     "\n",
     "    @_('')\n",
@@ -275,9 +376,13 @@
     "    def prod(self, p):\n",
     "        return p.CNUM\n",
     "    \n",
+    "    @_('ID')\n",
+    "    def prod(self, p):\n",
+    "        return table[p.ID]\n",
+    "    \n",
     "    @_(' \"(\" expr \")\" ')\n",
     "    def prod(self, p):\n",
-    "        return p.expr"
+    "        return p.expr\n"
    ]
   },
   {
@@ -289,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
