:sparkles; add traduction scheme

--- a/calculatorBool.ipynb
+++ b/calculatorBool.ipynb
@@ -20,6 +20,33 @@
     "|print 4 == (w < 3);| Resultado es falso |\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grammar and Traduction scheme"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "input -> `print` expr {escribe(expr.s)};\n",
+    "input -> asig;\n",
+    "asig -> ID `=` expr {table[ID.lexval] = expr.s}\n",
+    "expr -> exprOR `or` expr_1 {exprOR.s || expr_1.s}\n",
+    "expr -> exprOR {expr.s = exprOR.s}\n",
+    "oxprOR -> exprAND `and` exprOR_1 {exprAND.s && exprOR_1.s}\n",
+    "exprAND -> exprOR {exprAND.s = exprOR.s}\n",
+    "exprAND -> boolean {exprAND.s = boolean.s}\n",
+    "boolean -> not boolean_1 {boolean.s = !boolean_1.s}\n",
+    "boolean -> CBOOLEAN {boolean.s = CBOOLEAN}\n",
+    "boolean -> ID {boolean.s = table[ID.Lexval]}\n",
+    "boolean -> (expr) {boolean.s = expr.s}\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
