:sparkles: first set

--- a/calculatorBool.ipynb
+++ b/calculatorBool.ipynb
@@ -35,18 +35,83 @@
     "```\n",
     "input -> `print` expr {escribe(expr.s)};\n",
     "input -> asig;\n",
+    "\n",
     "asig -> ID `=` expr {table[ID.lexval] = expr.s}\n",
-    "expr -> exprOR `or` expr_1 {exprOR.s || expr_1.s}\n",
+    "\n",
+    "expr -> expr_1 `or` exprOR {expr_1.s || exprOR.s}\n",
     "expr -> exprOR {expr.s = exprOR.s}\n",
-    "oxprOR -> exprAND `and` exprOR_1 {exprAND.s && exprOR_1.s}\n",
-    "exprAND -> exprOR {exprAND.s = exprOR.s}\n",
+    "\n",
+    "exprOR -> exprOR_1 `and` exprAND {exprOR_1.s && exprAND.s}\n",
+    "exprOR -> exprAND {exprOR.s = exprAND.s}\n",
+    "\n",
     "exprAND -> boolean {exprAND.s = boolean.s}\n",
+    "\n",
     "boolean -> not boolean_1 {boolean.s = !boolean_1.s}\n",
     "boolean -> CBOOLEAN {boolean.s = CBOOLEAN}\n",
     "boolean -> ID {boolean.s = table[ID.Lexval]}\n",
     "boolean -> (expr) {boolean.s = expr.s}\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## L-recursive to R-recursive\n",
+    "\n",
+    "```\n",
+    "input -> `print` expr {escribe(expr.s)};\n",
+    "input -> asig;\n",
+    "asig -> ID `=` expr {table[ID.lexval] = expr.s}\n",
+    "\n",
+    "expr -> exprOR expr'\n",
+    "expr' -> `||` exprOR \n",
+    "expr' -> e\n",
+    "\n",
+    "exprOR -> exprAND exprOR'\n",
+    "exprOR' -> `and` exprAND expOR'\n",
+    "exprOR' -> e\n",
+    "\n",
+    "exprAnd -> boolean\n",
+    "boolean -> not boolean\n",
+    "boolean -> CBOOL\n",
+    "boolean -> ID\n",
+    "boolean -> `(`expr`)` \n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First and Second Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First set\n",
+    "\n",
+    "|first | Elementos|\n",
+    "|:-:|:-:|\n",
+    "|boolean| {CBOOL, 'ID', '(', 'not'} |\n",
+    "|exprAND| {CBOOL, 'ID', '(', 'not'} |\n",
+    "|exprOR | {CBOOL, 'ID', '(', 'not'} |\n",
+    "|exprOR' | { 'and' , e, } |\n",
+    "|expr' | {`or`, e} | \n",
+    "|expr | {CBOOL, 'ID', '(', 'not'} |\n",
+    "| asig | {'ID'} |\n",
+    "| input | {'ID', 'print'} |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
