:sparkles: add first set and second set

--- a/calculatorBool.ipynb
+++ b/calculatorBool.ipynb
@@ -72,8 +72,8 @@
     "exprOR' -> `and` exprAND expOR'\n",
     "exprOR' -> e\n",
     "\n",
-    "exprAnd -> boolean\n",
     "boolean -> not boolean\n",
+    "exprAnd -> boolean\n",
     "boolean -> CBOOL\n",
     "boolean -> ID\n",
     "boolean -> `(`expr`)` \n",
@@ -94,7 +94,7 @@
    "source": [
     "### First set\n",
     "\n",
-    "|first | Elementos|\n",
+    "|First | Elementos|\n",
     "|:-:|:-:|\n",
     "|boolean| {CBOOL, 'ID', '(', 'not'} |\n",
     "|exprAND| {CBOOL, 'ID', '(', 'not'} |\n",
@@ -104,6 +104,21 @@
     "|expr | {CBOOL, 'ID', '(', 'not'} |\n",
     "| asig | {'ID'} |\n",
     "| input | {'ID', 'print'} |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Second set\n",
+    "\n",
+    "|Second| Elementos|\n",
+    "|:-:|:-:|\n",
+    "|input |{$}|\n",
+    "|asig|';'|\n",
+    "|expr|';'|\n",
+    "|expr'|';'|\n",
+    "|exprOR|';' |"
    ]
   },
   {
