:sparkles: add translation scheme to r recursive grammar

--- a/calculatorBool.ipynb
+++ b/calculatorBool.ipynb
@@ -38,10 +38,10 @@
     "\n",
     "asig -> ID `=` expr {table[ID.lexval] = expr.s}\n",
     "\n",
-    "expr -> expr_1 `or` exprOR {expr_1.s || exprOR.s}\n",
+    "expr -> expr_1 `or` exprOR { espr.s = expr_1.s || exprOR.s}\n",
     "expr -> exprOR {expr.s = exprOR.s}\n",
     "\n",
-    "exprOR -> exprOR_1 `and` exprAND {exprOR_1.s && exprAND.s}\n",
+    "exprOR -> exprOR_1 `and` exprAND { exprOR.s = exprOR_1.s && exprAND.s}\n",
     "exprOR -> exprAND {exprOR.s = exprAND.s}\n",
     "\n",
     "exprAND -> boolean {exprAND.s = boolean.s}\n",
@@ -64,16 +64,16 @@
     "input -> asig;\n",
     "asig -> ID `=` expr {table[ID.lexval] = expr.s}\n",
     "\n",
-    "expr -> exprOR expr'\n",
-    "expr' -> `||` exprOR \n",
-    "expr' -> e\n",
+    "expr -> exprOR {expr'.h = exprOR.s} expr' {expr.s = expr'.s}\n",
+    "expr' -> `||` exprOR {expr'_1.h = expr'.h or exprOR.s}  expr'_1 {expr'.s = expr'_1.s}\n",
+    "expr' -> e {expr'.s = expr'.h}\n",
     "\n",
     "exprOR -> exprAND exprOR'\n",
     "exprOR' -> `and` exprAND expOR'\n",
     "exprOR' -> e\n",
+    "exprAnd -> boolean\n",
     "\n",
     "boolean -> not boolean\n",
-    "exprAnd -> boolean\n",
     "boolean -> CBOOL\n",
     "boolean -> ID\n",
     "boolean -> `(`expr`)` \n",
@@ -115,10 +115,13 @@
     "|Second| Elementos|\n",
     "|:-:|:-:|\n",
     "|input |{$}|\n",
-    "|asig|';'|\n",
-    "|expr|';'|\n",
-    "|expr'|';'|\n",
-    "|exprOR|';' |"
+    "|asig|';' '\\)'|\n",
+    "|expr|';' '\\)'|\n",
+    "|expr'|';' '\\)' |\n",
+    "|exprOR|'or' ';' '\\)' |\n",
+    "|exprOR'| 'or' ';' '\\)' |\n",
+    "|exprAND| 'and', 'or' ';' '\\)' |\n",
+    "|boolean | 'and' 'or' ';' '\\)' |"
    ]
   },
   {
