:pencil2: follow by second

--- a/calculatorBool.ipynb
+++ b/calculatorBool.ipynb
@@ -68,15 +68,15 @@
     "expr' -> `||` exprOR {expr'_1.h = expr'.h or exprOR.s}  expr'_1 {expr'.s = expr'_1.s}\n",
     "expr' -> e {expr'.s = expr'.h}\n",
     "\n",
-    "exprOR -> exprAND exprOR'\n",
-    "exprOR' -> `and` exprAND expOR'\n",
-    "exprOR' -> e\n",
-    "exprAnd -> boolean\n",
+    "exprOR -> exprAND {exprOR'.h = exprAND.s} exprOR' {exprOR.s = exprOR'.s}\n",
+    "exprOR' -> `and` exprAND {exprOR'_1.h = exprOR'.h and exprAND.s} expOR'_1 {exprOR'.s = exprOR'_1.s}\n",
+    "exprOR' -> e {exprOR'.s = exprOR'.h}\n",
+    "exprAnd -> boolean {exprOR'.s = boolean.s}\n",
     "\n",
-    "boolean -> not boolean\n",
-    "boolean -> CBOOL\n",
-    "boolean -> ID\n",
-    "boolean -> `(`expr`)` \n",
+    "boolean -> not boolean_1 {boolean.s = !bolean_1.s}\n",
+    "boolean -> CBOOL {boolean.s = CBOOL.lexval}\n",
+    "boolean -> ID {boolean.s = table[ID.lexval]}\n",
+    "boolean -> `(`expr`)` {boolean.s = expr.s}\n",
     "\n",
     "```"
    ]
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## First and Second Set"
+    "## First and Follow Set"
    ]
   },
   {
@@ -110,9 +110,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Second set\n",
+    "### Follow set\n",
     "\n",
-    "|Second| Elementos|\n",
+    "|Follow| Elementos|\n",
     "|:-:|:-:|\n",
     "|input |{$}|\n",
     "|asig|';' '\\)'|\n",
