:sparkles: add ast translation scheme

--- a/calculatorBool.ipynb
+++ b/calculatorBool.ipynb
@@ -125,17 +125,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Translation scheme AST\n",
+    "\n",
+    "```\n",
+    "input -> `print` expr {escribe(expr.s)};\n",
+    "input -> asig;\n",
+    "asig -> ID `=` expr {asig.s = haznodo(=)}\n",
+    "\n",
+    "expr -> exprOR {expr'.h = exprOR.s} expr' {expr.s = expr'.s}\n",
+    "expr' -> `||` exprOR {expr'_1.h = expr'.h or exprOR.s}  expr'_1 {expr'.s = expr'_1.s}\n",
+    "expr' -> e {expr'.s = expr'.h}\n",
+    "\n",
+    "exprOR -> exprAND {exprOR'.h = exprAND.s} exprOR' {exprOR.s = exprOR'.s}\n",
+    "exprOR' -> `and` exprAND {exprOR'_1.h = exprOR'.h and exprAND.s} expOR'_1 {exprOR'.s = exprOR'_1.s}\n",
+    "exprOR' -> e {exprOR'.s = exprOR'.h}\n",
+    "exprAnd -> boolean {exprOR'.s = boolean.s}\n",
+    "\n",
+    "boolean -> not boolean_1 {boolean.s = !bolean_1.s}\n",
+    "boolean -> CBOOL {boolean.s = CBOOL.lexval}\n",
+    "boolean -> ID {boolean.s = table[ID.lexval]}\n",
+    "boolean -> `(`expr`)` {boolean.s = expr.s}\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hola\")"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "919c7ce7a74021c6cd98257225c7c731a5c39ce25eb8800a5dd524e2eb8700bf"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10  ('.env': venv)",
+   "name": "python3"
+  },
   "language_info": {
    "name": "python",
-   "nbconvert_exporter": "python"
+   "version": ""
   },
   "orig_nbformat": 4
  },
